--- a/_config.yml
+++ b/_config.yml
@@ -57,16 +57,16 @@ avatar: "/img/logo-blog.png"
 author:
   name: David Chavarría Camacho
   email: "davidcc86@gmail.com"
-  facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
-  twitter: yourname   # eg. daattali
+  facebook: DawudArtCha  # eg. daattali
+  github: david-chavarria    # eg. daattali
+  twitter: ckamach   # eg. daattali
   reddit: yourname    # eg. daattali
   google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
   linkedin: yourname  # eg. daattali
   xing: yourname      # eg. daattali
   stackoverflow: yourlink  # eg. "3943160/daattali"
   snapchat: yourname  # eg. daattali
-  instagram: yourname # eg. daattali
+  instagram: david.chava # eg. daattali
   youtube: yourlink   # eg. user/daattali or channel/daattali
   spotify: yourname   # eg. daattali
   telephone: yourphone   # eg. +14159998888
