--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "https://david-chavarria.github.io/"
+url: "https://davidchavarria.com"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -25,10 +25,10 @@ description: Prueba de descriptor
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://david-chavarria.github.io/"
-    - Learn markdown: "https://david-chavarria.github.io/"
+    - Beautiful Jekyll: "https://davidchavarria.com"
+    - Learn markdown: "https://davidchavarria.com"
     - GitHub Pages: "https://github.com/david-chavarria/david-chavarria.github.io"
-  Author's home: "https://david-chavarria.github.io/"
+  Author's home: "https://davidchavarria.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
