--- a/_config.yml
+++ b/_config.yml
@@ -14,21 +14,21 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: mi sitio web
+title: historia + datos
 
 # Short description of your site
-description: Prueba de descriptor
+description: blog de historia digital centroamericana
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://davidchavarria.com"
-    - Learn markdown: "https://davidchavarria.com"
-    - GitHub Pages: "https://github.com/david-chavarria/david-chavarria.github.io"
-  Author's home: "https://davidchavarria.com"
+  CV: "aboutme"
+  #Resources:
+   # - Beautiful Jekyll: "https://davidchavarria.com"
+   # - Learn markdown: "https://davidchavarria.com"
+   # - GitHub Pages: "https://github.com/david-chavarria/david-chavarria.github.io"
+  #Author's home: "https://davidchavarria.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
