--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: historia + datos
+title: David Chavarría
 
 # Short description of your site
 description: blog de historia digital centroamericana
