--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: <code>data</code><b>historia</b> 
+title: <code>data</code> <b>historia</b><br>
+blog de historia digital centroamericana
 
 # Short description of your site
 description: blog de historia digital centroamericana
