--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/logo-blog.png"
+avatar: ""
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -55,7 +55,7 @@ avatar: "/img/logo-blog.png"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: David Chavarría Camacho
+  name: Historia Data
   email: "davidcc86@gmail.com"
   facebook: DawudArtCha  # eg. daattali
   github: david-chavarria    # eg. daattali
@@ -77,7 +77,7 @@ author:
 # Select which links to show in the footer
 footer-links-active:
   rss: false
-  facebook: true
+  facebook: false
   email: true
   twitter: true
   google-plus: false
